[package]
name = "sl-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["kyuvie"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"

[dependencies.pancurses]
version = "0.17"
features = ["win32a"]
